update chapter3 section4