@@ -40,6 +40,7 @@
     <spring.version>5.3.32</spring.version>
     <bytebuddy.version>1.14.17</bytebuddy.version>
     <bytekit.version>0.0.9</bytekit.version>
+    <maven-surefire-plugin.version>3.3.0</maven-surefire-plugin.version>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -63,4 +64,16 @@
       </dependency>
     </dependencies>
   </dependencyManagement>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>${maven-surefire-plugin.version}</version>
+        <configuration>
+          <argLine>-XX:+EnableDynamicAgentLoading</argLine>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
